public enum Direction { LEFT,UP, RIGHT, DOWN , UpRIGHT, UpLEFT,DownRIGHT,DownLEFT }

